Implementando emissão de nfe

--- a/l10n_br_account/wizard/l10n_br_account_nfe_export_invoice_view.xml
+++ b/l10n_br_account/wizard/l10n_br_account_nfe_export_invoice_view.xml
@@ -19,7 +19,8 @@
 						<group states="done" string="Resultado da Exportação">
 							<field nolabel="1" readonly="1" colspan="4" name="nfe_export_result">
 								<tree colors="green:status == 'success';red:status == 'error'">
-									<field name="document"/>
+									<field name="file" filename="name" />		
+									<field name="xml_type"/>
 									<field name="message"/>
 									<field name="status"/>
 								</tree>
