alterações nas vistas limpeza de arquivos a mais

--- a/l10n_br_cnab_base/wizard/export_cnab_view.xml
+++ b/l10n_br_cnab_base/wizard/export_cnab_view.xml
@@ -7,25 +7,26 @@
         <field name="view_type">form</field>
         <field name="model">cnab.wizard.exporter</field>
         <field name="arch" type="xml">
-            <form string="CNAB Exporter">
+            <form string="Exportar CNAB">
                 <field name="state" invisible="1"/>
                 <group states="init">
                     <field name="bank_id"/>
-                    <group col="8">
-                        <label string=" " colspan="6"/>
-                        <button type="object" name="export" string="Export"/>
-                    </group>
                 </group>
                 <group states="done">
                     <field name="filename" invisible="1"/>
                     <field name="file" filename="filename"/>
                 </group>
+                <footer>
+                    <group states="init">
+                        <button type="object" name="export" string="Export"/>
+                    </group>
+                </footer>
             </form>
         </field>
     </record>
     
     <record id="action_cnab_exporter" model="ir.actions.act_window">
-        <field name="name">Export CNAB</field>
+        <field name="name">Exportar CNAB</field>
         <field name="res_model">cnab.wizard.exporter</field>
         <field name="view_type">form</field>
         <field name="view_mode">form</field>
