--- a/l10n_br_cnab_base/wizard/import_cnab_view.xml
+++ b/l10n_br_cnab_base/wizard/import_cnab_view.xml
@@ -7,19 +7,20 @@
         <field name="view_type">form</field>
         <field name="model">cnab.wizard.importer</field>
         <field name="arch" type="xml">
-            <form string="CNAB Importer">
-                <field name="bank_id"/>
-                <field name="file"/>
-                <group col="8">
-                    <label string=" " colspan="6"/>
-                    <button type="object" name="import_file" string="Import"/>
+            <form string="Importar CNAB" version="7.0">
+                <group>
+                    <field name="bank_id"/>
+                    <field name="file"/>
                 </group>
+                <footer>
+                    <button type="object" name="import_file" string="Import"/>
+                </footer>
             </form>
         </field>
     </record>
     
     <record id="action_cnab_importer" model="ir.actions.act_window">
-        <field name="name">Import CNAB</field>
+        <field name="name">Importar CNAB</field>
         <field name="res_model">cnab.wizard.importer</field>
         <field name="view_type">form</field>
         <field name="view_mode">form</field>
