### JÁ TEMOS CNAB! #### Adicionei dois módulos: - l10n_cnan_base e - l10n_cnab_bradesco Que fazem a exportação e importação de ficheiros CNAB400. Para já só do Bradesco. O módulo base deve ter o código comum a todos os bancos, como só fiz para o Bradesco pode ser que haja código a mudar do módulo l10n_cnab_bradesco para o base ao implementar outros bancos. PARA INSTALAR E CONFIGURAR: 1. Contabilidade-->File Format Loader 2. Aí carreguem o formato de remessa e retorno, seleccionando o tipo deles, remessa ou retorno NOTA: Os ficheiros XML com a estrutura estão na pasta l10n_cnab_base/data 3. Por fim, configurar o Banco. Na comfiguração da empresa, adicionem nova conta e no campo Banco 'Criar e Editar...' tem uma secção CNAB, aí seleccionem o booleano CNAB e coloquem o nome e código, no caso do Bradesco é BRADESCO 137. PRÓXIMOS DESENVOLVIMENTOS: 1. Desenvolver para outros bancos, pois só deve funcionar com o Bradesco.

--- a/l10n_br_cnab_base/wizard/export_cnab_view.xml
+++ b/l10n_br_cnab_base/wizard/export_cnab_view.xml
@@ -7,7 +7,7 @@
         <field name="view_type">form</field>
         <field name="model">cnab.wizard.exporter</field>
         <field name="arch" type="xml">
-            <form string="Exportar CNAB">
+            <form string="Exportar CNAB" version="7.0">
                 <field name="state" invisible="1"/>
                 <group states="init">
                     <field name="bank_id"/>
