--- a/l10n_br_account_product/views/product_view.xml
+++ b/l10n_br_account_product/views/product_view.xml
@@ -21,6 +21,7 @@
 						</group>
 						<group>
 							<field name="fiscal_classification_id" attrs="{'required': [('fiscal_type', '=', 'product')]}" domain="[('type', '=', 'normal')]"/>
+							<field name="fcp"/>
 							<field name="service_type_id" attrs="{'required': [('type', '=', 'service'), ('fiscal_type', '=', 'product')], 'invisible': [('type', '!=', 'service'), ('fiscal_type', '=', 'product')]}" domain="[('internal_type', '=', 'normal')]"/>
 						</group>
 					</group>
