--- a/l10n_br_account/views/product_view.xml
+++ b/l10n_br_account/views/product_view.xml
@@ -12,13 +12,17 @@
 				</field>
 				<notebook position="inside">
 					<page string="Fiscal">
-						<field colspan="4" nolabel="1" name="fiscal_category_default_ids">
-							<tree string="Operações Padrões" editable="top">
-								<field name="fiscal_category_source_id" required="1" />
-								<field name="fiscal_category_destination_id" required="1" />
-								<field name="to_state_id" required="0" />
-							</tree>
-						</field>
+						<notebook>
+							<page string="Troca de Operações Padrões">
+								<field colspan="4" nolabel="1" name="fiscal_category_default_ids">
+									<tree editable="top">
+										<field name="fiscal_category_source_id" required="1" />
+										<field name="fiscal_category_destination_id" required="1" />
+										<field name="to_state_id" required="0" />
+									</tree>
+								</field>
+							</page>
+						</notebook>
 					</page>
 				</notebook>
 			</field>
