--- a/l10n_br_account_product/views/product_view.xml
+++ b/l10n_br_account_product/views/product_view.xml
@@ -13,7 +13,7 @@
 				</field>
 				<field name="supplier_taxes_id" position="replace">
 				</field>
-				<field name="fiscal_category_default_ids" position="before">
+				<xpath expr="//page[@string='Fiscal']/notebook" position="before">
 					<group string="Dados Fiscais">
 						<group>
 							<field name="fiscal_type" required="1"/>
@@ -33,10 +33,20 @@
 							<field name="supplier_taxes_id" colspan="2" widget="many2many_tags"/>
 						</group>
 					</group>
-                    			<group string="Dados Fiscais de Importação">
-						<field name="fci"/>
-					</group>
-				</field>
+						<group string="Dados Fiscais de Importação">
+							<field name="fci"/>
+						</group>
+				</xpath>
+				<page string="Operações Padrões" position="after">
+					<page string="Fundo de Combate a Probreza">
+						<field colspan="4" nolabel="1" name="fcp_ids">
+							<tree editable="top">
+								<field name="to_state_id" required="0" />
+								<field name="fcp" required="1" />
+							</tree>
+						</field>
+					</page>
+				</page>
 			</field>
 		</record>
 
