--- a/l10n_br_account_product/views/account_product_fiscal_classification_view.xml
+++ b/l10n_br_account_product/views/account_product_fiscal_classification_view.xml
@@ -76,6 +76,14 @@
                                 <field colspan="2" nolabel="1" widget="one2many_list" name="purchase_tax_definition_line"/>
                             </group>
                         </page>
+						<page string="Fundo de Combate a Probreza">
+						<field colspan="4" nolabel="1" name="tax_fcp_ids">
+							<tree editable="top">
+								<field name="to_state_id" required="0" />
+								<field name="fcp" required="1" />
+							</tree>
+						</field>
+						</page>
 						<page string="Impostos Estimados">
 							<div class="oe_right oe_button_box" name="buttons">
 								<button class="oe_inline oe_stat_button" type="object"
