--- a/l10n_br_account_product/views/account_product_fiscal_classification_view.xml
+++ b/l10n_br_account_product/views/account_product_fiscal_classification_view.xml
@@ -80,7 +80,7 @@
 						<field colspan="4" nolabel="1" name="tax_fcp_ids">
 							<tree editable="top">
 								<field name="to_state_id" required="0" />
-								<field name="fcp" required="1" />
+								<field name="fcp_tax_id" required="1" />
 							</tree>
 						</field>
 						</page>
