--- a/l10n_br_account_product/views/res_country_view.xml
+++ b/l10n_br_account_product/views/res_country_view.xml
@@ -13,7 +13,7 @@
 					<notebook>
 						<page string="ICMS">
 							<group>
-								<field name="fcp"/>
+								<field name="fcp_tax_id"/>
 							</group>
 							<field name="icms_table_id" >
 								<tree editable="bottom">
