--- a/l10n_br_stock_account/views/stock_account_view.xml
+++ b/l10n_br_stock_account/views/stock_account_view.xml
@@ -26,6 +26,18 @@
 			</field>
 		</record>
 
+		<record id="l10n_br_view_picking_inherit_tree" model="ir.ui.view">
+            <field name="name">stock.picking.tree.inherit</field>
+            <field name="model">stock.picking</field>
+			<field name="priority">32</field>
+            <field name="inherit_id" ref="stock.vpicktree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='origin']" position="after">
+                    <field name="invoice_reserved_number"/>
+                </xpath>
+            </field>
+        </record>
+
 		<record id="l10n_br_view_move_picking_tree" model="ir.ui.view">
 			<field name="name">l10n_br_stock.move.tree</field>
 			<field name="model">stock.move</field>
