--- a/l10n_br_stock_account/views/stock_account_view.xml
+++ b/l10n_br_stock_account/views/stock_account_view.xml
@@ -30,9 +30,9 @@
             <field name="name">stock.picking.tree.inherit</field>
             <field name="model">stock.picking</field>
 			<field name="priority">32</field>
-            <field name="inherit_id" ref="stock.vpicktree"/>
+            <field name="inherit_id" ref="stock_account.view_picking_inherit_tree2"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='origin']" position="after">
+                <xpath expr="//field[@name='invoice_state']" position="after">
                     <field name="invoice_reserved_number"/>
                 </xpath>
             </field>
