[NEW] GNRE File field

--- a/l10n_br_account_product/views/account_invoice_view.xml
+++ b/l10n_br_account_product/views/account_invoice_view.xml
@@ -28,6 +28,7 @@
                         <field name="gnre_due_days" attrs="{'invisible': [('has_gnre','!=', True)]}"/>
 					    <field name="gnre_response" attrs="{'invisible': [('has_gnre','!=', True)]}"/>
 					    <field name="amount_total_gnre" attrs="{'invisible': [('has_gnre','!=', True)]}"/>
+						<field name="gnre_receipt_file" attrs="{'invisible': [('has_gnre','!=', True)]}"/>
                     </group>
                 </xpath>
 				<label for="comment" position="replace">
