--- a/l10n_br_account_product/views/res_partner_view.xml
+++ b/l10n_br_account_product/views/res_partner_view.xml
@@ -33,6 +33,7 @@
 					<field name="cfop_id" colspan="4" domain="[('type', '=', type), ('internal_type', '=', 'normal')]"/>
 					<field name="ind_final"/>
 					<field name="icms_st_extract"/>
+					<field name="has_gnre"/>
 					<field name="tax_estimate"/>
 				</field>
 				<xpath expr="/form/notebook/page/field[@name='tax_ids']/tree/field[@name='tax_code_src_id']" position="before">
