--- a/l10n_br_account_product/views/res_country_view.xml
+++ b/l10n_br_account_product/views/res_country_view.xml
@@ -12,7 +12,8 @@
 						<page string="ICMS">
 							<group>
 								<field name="fcp_tax_id"/>
-								<field name="gnre_id"/>
+								<field name="gnre_inter_id"/>
+								<field name="gnre_st_id"/>
 							</group>
 						</page>
 					</notebook>
