--- a/l10n_br_account_product/views/account_product_fiscal_classification_view.xml
+++ b/l10n_br_account_product/views/account_product_fiscal_classification_view.xml
@@ -101,6 +101,7 @@
 									<field name="state_taxes"/>
 									<field name="municipal_taxes"/>
 									<field name="origin"/>
+									<field name="create_date"/>
 								</tree>
 								<form>
 									<group>
@@ -109,8 +110,7 @@
 											<field name="origin"/>
 											<field name="version"/>
 											<field name="state_id"/>
-											<field name="date_start"/>
-											<field name="date_end"/>
+											<field name="create_date"/>
 										</group>
 										<group>
 											<field name="active"/>
@@ -236,6 +236,7 @@
 									<field name="state_taxes"/>
 									<field name="municipal_taxes"/>
 									<field name="origin"/>
+									<field name="create_date"/>
 								</tree>
 								<form>
 									<group>
@@ -244,8 +245,7 @@
 											<field name="origin"/>
 											<field name="version"/>
 											<field name="state_id"/>
-											<field name="date_start"/>
-											<field name="date_end"/>
+											<field name="create_date"/>
 										</group>
 										<group>
 											<field name="active"/>
