--- a/l10n_br_pos/views/point_of_sale_view.xml
+++ b/l10n_br_pos/views/point_of_sale_view.xml
@@ -92,6 +92,7 @@
                 <field name="cod_ativacao" />
                 <field name="numero_caixa" />
                 <field name="impressora" />
+                <field name="printer_params" />
             </group>
         </group>
 
