[MRG] Merge oca l10n_br_pos

--- a/l10n_br_pos/views/point_of_sale_view.xml
+++ b/l10n_br_pos/views/point_of_sale_view.xml
@@ -12,6 +12,9 @@
             <field name="cfe_return" />
             <field name="chave_cfe" />
             <field name="num_sessao_sat" />
+            <field name="canceled_order" />
+            <field name="pos_order_associated" />
+
         </field>
         <button name="action_invoice" position="attributes">
             <attribute name="invisible">1</attribute>
@@ -76,9 +79,24 @@
         <field name="iface_invoicing" position="after">
             <field name="save_identity_automatic"/>
         </field>
-        <field name="iface_invoicing" position="after">
+        <field name="iface_print_via_proxy" position="after">
             <field name="iface_sat_via_proxy"/>
         </field>
+        <group string="Hardware Proxy" position="after" >
+            <group string="Configuraçoes SAT" attrs="{'invisible': [('iface_sat_via_proxy', '=', False)]}">
+                <field name='sat_ambiente' invisible='1'/>
+                <field name="cnpj_homologacao" attrs="{'invisible': [('sat_ambiente', '=', 'producao')]}"/>
+                <field name="ie_homologacao" attrs="{'invisible': [('sat_ambiente', '=', 'producao')]}"/>
+                <field name="cnpj_software_house" />
+                <field name="sat_path" />
+                <field name="cod_ativacao" />
+                <field name="numero_caixa" />
+                <field name="impressora" />
+                <field name="printer_params" />
+            </group>
+        </group>
+
+
     </field>
 </record>
 
