[NEW] Calculated access_key field in stock.picking model and reference related_fiscal_document in Refund Invoice

--- a/l10n_br_stock_account/wizard/stock_invoice_onshipping_view.xml
+++ b/l10n_br_stock_account/wizard/stock_invoice_onshipping_view.xml
@@ -11,6 +11,7 @@
 					<field name="fiscal_category_journal" />
 					<newline/>
 					<field name="journal_id" attrs="{'required': [('fiscal_category_journal', '=', False)], 'invisible': [('fiscal_category_journal', '=', True)]}" />
+					<field name="fiscal_doc_ref" />
 				</field>
 			</field>
 		</record>
