--- a/l10n_br_stock_account/views/stock_account_view.xml
+++ b/l10n_br_stock_account/views/stock_account_view.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 	<data>
+		<record id="l10n_br_stock_account_stock_picking_search" model="ir.ui.view">
+			<field name="model">stock.picking</field>
+			<field name="inherit_id" ref="l10n_br_stock.view_l10n_br_sale_stock_filter"/>
+			<field name="arch" type="xml">
+				<field name="ie" position="after">
+                    <field name="fiscal_document_access_key"/>
+                </field>
+			</field>
+		</record>
 
 		<record id="l10n_br_stock_account_stock_picking_tree" model="ir.ui.view">
 			<field name="model">stock.picking</field>
@@ -25,6 +34,7 @@
 					<field name="fiscal_category_id" attrs="{'invisible': [('invoice_state', '=', 'none')], 'required': [('invoice_state', '=', '2binvoiced')], 'readonly': [('invoice_state', '=', 'invoiced')]}"/>
 					<field name="fiscal_position" domain="[('fiscal_category_id', '=', fiscal_category_id)]" attrs="{'invisible': [('invoice_state', '=', 'none')], 'required': [('invoice_state', '=', '2binvoiced')], 'readonly': [('invoice_state', '=', 'invoiced')]}"/>
 					<field name="invoice_reserved_number" domain="[('fiscal_category_id', '=', fiscal_category_id)]" attrs="{'invisible': [('invoice_state', '=', 'none')], 'readonly': [('invoice_state', '=', 'invoiced')]}"/>
+					<field name="fiscal_document_access_key" />
 				</field>
 				<field name="partner_id" position="attributes">
 					<attribute name="context_br">{'fiscal_category_id': fiscal_category_id, 'company_id': company_id}</attribute>
@@ -32,6 +42,7 @@
                 <field name="company_id" position="attributes">
 					<attribute name="context_br">{'fiscal_category_id': fiscal_category_id, 'company_id': company_id}</attribute>
 				</field>
+
 			</field>
 		</record>
 
