[NEW] Purpose field in Fiscal Category that can fill invoice nfe_purpose field

--- a/l10n_br_account_product/views/l10n_br_account_view.xml
+++ b/l10n_br_account_product/views/l10n_br_account_view.xml
@@ -10,8 +10,13 @@
 				<field name="fiscal_type" position="attributes">
 					<attribute name="invisible">0</attribute>
 				</field>
+				<field name="fiscal_type" position="after">
+					<field name="purpose" />
+				</field>
 			</field>
 		</record>
+
+
 
 	</data>
 </openerp>
