--- a/sped_purchase/views/purchase_order.xml
+++ b/sped_purchase/views/purchase_order.xml
@@ -10,6 +10,11 @@
             <field name="model">purchase.order</field>
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
+                <field name="state" position="replace">
+                    <field name="kanban_state" widget="statusbar"
+                           statusbar_visible="draft,purchase,invoiced,received"/>
+                    <field name="state" invisible="True"/>
+                </field>
                 <field name="partner_id" position="attributes">
                     <attribute name="attrs">{'invisible': [('is_brazilian',
                         '=', True)]}
@@ -83,11 +88,12 @@
             <field name="inherit_id" ref="purchase.view_purchase_order_kanban"/>
             <field name="arch" type="xml">
                 <kanban position="replace">
-                    <kanban class="o_kanban_small_column" default_group_by="state">
+                    <kanban class="o_kanban_small_column" default_group_by="kanban_state">
                         <field name="name"/>
                         <field name="participante_id"/>
                         <field name="amount_total" widget="monetary"/>
                         <field name="state"/>
+                        <field name="kanban_state"/>
                         <field name="date_order"/>
                         <field name="currency_id" can_create="true" can_write="true"/>
                         <field name="invoice_status"/>
@@ -145,7 +151,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">purchase.order</field>
             <field name="view_mode">kanban,form</field>
-            <field name="domain">[('state','in',('draft', 'purchase', 'invoiced', 'received'))]</field>
+            <field name="domain">[('kanban_state','in',('draft', 'purchase', 'invoiced', 'received'))]</field>
         </record>
 
         <menuitem action="purchase_kanban_action"
