--- a/sped_purchase/views/sped_documento_item.xml
+++ b/sped_purchase/views/sped_documento_item.xml
@@ -5,7 +5,7 @@
         <field name="name">sped.documento.item.base.form</field>
         <field name="model">sped.documento.item</field>
         <field name="mode">primary</field>
-        <field name="inherit_id" ref="sped.sped_documento_item_emissao_form"/>
+        <field name="inherit_id" ref="sped.sped_documento_item_recebimento_form"/>
         <field name="arch" type="xml">
             <field name="documento_id" position="before">
                 <group>
@@ -23,13 +23,48 @@
     <record model="ir.ui.view" id="sped_documento_item_tree">
         <field name="name">sped.documento.item.base.tree</field>
         <field name="model">sped.documento.item</field>
-        <field name="mode">primary</field>
-        <field name="inherit_id" ref="sped.sped_documento_item_emissao_tree"/>
+        <field name="inherit_id" ref="sped_nfe.sped_documento_item_ajuste_recebimento_tree"/>
         <field name="arch" type="xml">
             <tree position="inside">
                 <field name="purchase_line_ids" required="0" invisible="1"/>
                 <field name="purchase_ids" required="0" invisible="1"/>
+                <field name="produto_id" required="0" invisible="1"/>
+                <button name="selecionar_produto" string="Selecionar Produto" type="object"
+                        attrs="{'invisible': [('produto_id', '!=', False)]}"/>
             </tree>
+            <tree position="attributes">
+                <attribute name="colors">red:produto_id==False</attribute>
+                <attribute name="default_order">produto_id</attribute>
+            </tree>
+            <field name="vr_produtos" position="attributes">
+                <attribute name="invisible">True</attribute>
+            </field>
+            <field name="vr_nf" position="replace"/>
+            <field name="vr_produtos" position="after">
+                <field name="vr_nf" sum="vr_nf"/>
+            </field>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="sped_documento_item_ajuste_recebimento_form">
+        <field name="name">sped.documento.item.ajuste.recebimento.form (in sped_purchase)</field>
+        <field name="model">sped.documento.item</field>
+        <field name="inherit_id" ref="sped_nfe.sped_documento_item_ajuste_recebimento_form"/>
+        <field name="arch" type="xml">
+            <field name="documento_id" position="before">
+                <field name="participante_id" invisible="True"/>
+                <field name="empresa_id" invisible="True"/>
+                <group>
+                    <field name="purchase_ids" widget="many2many_tags"
+                           domain="[('invoice_status', '=', 'to invoice'), 
+                           '|', ('participante_id', '=', participante_id), ('participante_id', '=', False),
+                           '|', ('empresa_id', '=', empresa_id), ('empresa_id', '=', False)]"/>
+                    <field name="purchase_line_ids" widget="many2many_tags"
+                           attrs="{'invisible': [('purchase_ids', '=', False)]}"
+                           domain="['|', ('produto_id', '=', produto_id), ('produto_id', '=', False)]"/>
+                    <field name="pode_alterar_quantidade" invisible="True"/>
+                </group>
+            </field>
         </field>
     </record>
 </odoo>
