--- a/sped_stock/views/inherited_sped_operacao_base_view.xml
+++ b/sped_stock/views/inherited_sped_operacao_base_view.xml
@@ -14,9 +14,13 @@
             <field name="preco_automatico" position="after">
                 <newline />
                 <field name="enviar_pelo_estoque" attrs="{'invisible': ['!', ('modelo', 'in', ['55', '65', '59'])]}" />
-                <field name="stock_picking_type_id" attrs="{'invisible': ['!', ('modelo', 'in', ['55', '65', '59', '2D'])]}" options="{'no_create': True, 'no_open': True}" />
                 <newline />
             </field>
+            <page name="operacoes_subsequentes" position="after">
+                <page name="stock_picking_page" string="Operações de estoque">
+                    <field name="stock_picking_type_ids"/>
+                </page>
+            </page>
         </field>
     </record>
 
