--- a/sped_stock/views/inherited_stock_picking_type_view.xml
+++ b/sped_stock/views/inherited_stock_picking_type_view.xml
@@ -9,20 +9,13 @@
         <field name="model">stock.picking.type</field>
         <field name="inherit_id" ref="stock.view_picking_type_form"/>
         <field name="arch" type="xml">
-            <field name="warehouse_id" position="after">
-                <field name="operacao_id"/>
-            </field>
-        </field>
-    </record>
-
-    <record model="ir.ui.view" id="sped_stock_picking_type_tree">
-        <field name="name">stock.picking.type (in sped_stock)</field>
-        <field name="model">stock.picking.type</field>
-        <field name="inherit_id" ref="stock.view_picking_type_list"/>
-        <field name="arch" type="xml">
-            <field name="warehouse_id" position="after">
-                <field name="operacao_id"/>
-            </field>
+            <xpath expr="//sheet" position="inside">
+                <notebook>
+                    <page string="Operações Fiscais" name="operacoes_fiscais">
+                        <field name="operacao_ids"/>
+                    </page>
+                </notebook>
+            </xpath>
         </field>
     </record>
 
