[NEW] Considera a operação na importação do XML

--- a/sped_nfe/views/sped_manifestacao_destinatario.xml
+++ b/sped_nfe/views/sped_manifestacao_destinatario.xml
@@ -56,6 +56,7 @@
                     </group>
                     <group>
                         <field name="tipo_operacao"/>
+                        <field name="operacao_id"/>
                         <field name="valor_documento" widget="monetary"/>
                         <field name="situacao_nfe"/>
                         <field name="forma_inclusao"/>
