--- a/l10n_br_base/views/l10n_br_base_menus_view.xml
+++ b/l10n_br_base/views/l10n_br_base_menus_view.xml
@@ -7,8 +7,9 @@
 
     <menuitem id="menu_cadastro"
         name="Cadastro"
-        sequence="-100"
+        sequence="3"
         web_icon="sped,static/description/icon.png"
+        groups="l10n_br_base.GRUPO_SUPORTE"
         />
 
     <menuitem id="menu_cadastro_participante"
